--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
          </div>
          <!---->
          <div class="video_items">
-         <var ></var><a href="#">
+         <var ></var><a href="/videoweb.html/video.html">
             <img src="images/video_images/back3.jpg" alt="">
           </a>
           <div class="details flex">
