--- a/videoweb.html/video.html
+++ b/videoweb.html/video.html
@@ -169,7 +169,7 @@
           </div>
           <!--        video tages            -->
           <video controls>
-            <source src="https://you.be/BBAyRBTfsOU"  poster="images/video_images/back1.jpg">
+            <source src="https://youtu.be/BBAyRBTfsOU"  poster="images/video_images/back1.jpg">
           </video>
 
           <!--        total viwer            -->
@@ -185,7 +185,7 @@
               </div>
               <div class="icon">
                 <i class="fa fa-thumbs-down"></i>
-                <label>DISLIKE</label>
+                <label>DISLIKE!</label>
               </div>
               <div class="icon">
                 <i class="fa fa-share"></i>
