--- a/videoweb.html/video.html
+++ b/videoweb.html/video.html
@@ -169,7 +169,7 @@
           </div>
           <!--        video tages            -->
           <video controls>
-            <source src="https://youtu.be/BBAyRBTfsOU"  poster="images/video_images/back1.jpg">
+            <source src="https://youtu.be/BBAyRBTfsOU">
           </video>
 
           <!--        total viwer            -->
