--- a/videoweb.html/video.html
+++ b/videoweb.html/video.html
@@ -185,7 +185,7 @@
               </div>
               <div class="icon">
                 <i class="fa fa-thumbs-down"></i>
-                <label>DISLIKE!</label>
+                <label>DISLIKE</label>
               </div>
               <div class="icon">
                 <i class="fa fa-share"></i>
