--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        <div class="header_container">
         
 <a href="/">
-        <div class="img">
+        <div class="img" id="logo">
           <img src="images/logo.jpg" alt="">
         </div></a>
       </div>
@@ -26,7 +26,7 @@
            <i class="fa-solid fa-magnifying-glass"></i>
          </div>
 
-
+<br>
         
 
          <div class="toggle">
@@ -41,8 +41,8 @@
        <div>
        <section class="nav" id="navbar">
        <nav class="nav_container">
-           <a href="/" class="nav_link nav_logo ">
-             <i class="fa-solid fa-bars nav_icon"></i>
+           <a href="#" class="nav_link nav_logo ">
+             <i class="fa-solid fa-bars nav_icon" id="menu2"></i>
              <span class="logo_name">
                <i class="fab fa-youtube"></i>
                DHIRAJHUB
@@ -51,7 +51,7 @@
 
            <div class="nav_list">
              <div class="nav_items navtop">
-               <a href="/" class="nav_link navtop active">
+               <a href="#" class="nav_link navtop active">
                  <i class="fa fa-house nav_icon"></i>
                  <span class="nav_name">Home</span>
                </a>
@@ -65,7 +65,7 @@
                </a>
                <a href="#" class="nav_link navtop">
                  <i class="fa-solid fa-users nav_icon"></i>
-                 <span class="nav_name">Channel</span>
+                 <span class="nav_name">About</span>
                </a>
                <a href="#" class="nav_link navtop">
                  <i class="fa-solid fa-video nav_icon"></i>
@@ -98,7 +98,7 @@
               <div class="nav_items subscribe-container">
 
                <a href="#" class="nav_link">
-                 <i class="fa-solid fa-comment nav_icon"></i>
+                 <i class="fa-solid fa-layer-group nav_icon"></i>
                  <span class="nav_name"><h1>Categories</h1></span>
                </a>
                </div>
@@ -318,6 +318,9 @@
         </div>
        </section>
      </main>
+     <footer>
+
+     </footer>
 
 
      <script src="js/main.js" charset="utf-8"></script>
