--- a/videoweb.html/video.html
+++ b/videoweb.html/video.html
@@ -41,7 +41,7 @@
   <div>
     <section class="nav" id="navbar">
     <nav class="nav_container">
-        <a href="/" class="nav_link nav_logo ">
+        <a href="#" class="nav_link nav_logo ">
           <i class="fa-solid fa-bars nav_icon"></i>
           <span class="logo_name">
             <i class="fab fa-youtube"></i>
@@ -170,7 +170,7 @@
             <p>How to make Hotel Booking Website With HTML CSS ......</p>
           </div>
           <!--        video tages            -->
-          <iframe width="1280" height="720" src="https://www.18porn.sex/embed/1649372" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+          <iframe width="1000" height="650" src="https://www.18porn.sex/embed/1649372" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
             
           </video>
 
