--- a/single-page.html
+++ b/single-page.html
@@ -63,7 +63,7 @@
               <i class="fa-brands fa-tiktok nav_icon"></i>
               <span class="nav_name">Short Video</span>
             </a>
-            <a href="#" class="nav_link navtop">
+            <a href="/html/profile.html" class="nav_link navtop">
               <i class="fa-solid fa-users nav_icon"></i>
               <span class="nav_name">About</span>
             </a>
