--- a/html/profile.html
+++ b/html/profile.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="split left">
+    <div class="split left" id="left">
         <div class="centered">
             <head>
                 <meta charset="UTF-8" />
@@ -43,7 +43,7 @@
         </div>
       </div>
       
-      <div class="split right">
+      <div class="split right" id="right">
         <div class="centered">
             <head>
                 <meta charset="UTF-8" />
