--- a/videoweb.html/video.html
+++ b/videoweb.html/video.html
@@ -62,10 +62,10 @@
               <i class="fa fa-compass nav_icon"></i>
               <span class="nav_name">Explore</span>
             </a>
-            <a href="#" class="nav_link navtop">
+           <!-- <a href="#" class="nav_link navtop">
               <i class="fa-brands fa-tiktok nav_icon"></i>
               <span class="nav_name">Short Video</span>
-            </a>
+            </a>-->
             <a href="/html/profile.html" class="nav_link navtop">
               <i class="fa-solid fa-users nav_icon"></i>
               <span class="nav_name">About</span>
@@ -296,7 +296,7 @@
             </div>
           </div>-->
           <!--        video comment  by other           -->
-        <!--  <div class="replay">
+         <!--  <div class="replay">
             <label class="tags"> <i class="fa fa-caret-up"></i> Hide Reply </label>
             <div class="replay-details flex">
               <div class="img">
@@ -311,7 +311,7 @@
 
 
           <!--        no replay           -->
-        <!--  <div class="details_Comment no-replay">
+         <!--  <div class="details_Comment no-replay">
             <div class="details flex">
               <div class="img">
                 <h1>M</h1>
