--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                  <i class="fa fa-compass nav_icon"></i>
                  <span class="nav_name">Explore</span>
                </a>
-               <a href="#" class="nav_link navtop">
+              <!-- <a href="#" class="nav_link navtop">
                  <i class="fa-brands fa-tiktok nav_icon"></i>
                  <span class="nav_name">Short Video</span>
-               </a>
+               </a>-->
                <a href="/html/profile.html" class="nav_link navtop">
                  <i class="fa-solid fa-users nav_icon"></i>
                  <span class="nav_name">About</span>
