--- a/html/profile.html
+++ b/html/profile.html
@@ -21,7 +21,7 @@
               <body>
                 <div class="card">
                   <div class="img-bx">
-                    <img src="/images/Dhirajingle.jpg" alt="img" />
+                    <img src="/images/logo1.jpeg" alt="img" />
                   </div>
                   <div class="content">
                     <div class="detail">
