--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
 <a href="/">
         <div class="img" id="logo">
-          <img src="images/logo.jpg" alt="">
+          <img src="images/logo.jpeg" alt="">
         </div></a>
       </div>
          <div class="none"> </div>
