--- a/single-page.html
+++ b/single-page.html
@@ -18,7 +18,7 @@
      
 <a href="/">
      <div class="img">
-       <img src="images/logo.jpg" alt="">
+       <img src="images/logo.jpeg" alt="">
      </div></a>
    </div>
       <div class="none"> </div>
