--- a/html/profile.html
+++ b/html/profile.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link type="images/png" rel="icon" href="/images/logo1.jpeg">
+
     <link rel="stylesheet" href="/css/profile.css">
     <title>Document</title>
 </head>
