--- a/html/profile.html
+++ b/html/profile.html
@@ -22,9 +22,10 @@
               </head>
               <body>
                 <div class="card">
+                  <a href="/">
                   <div class="img-bx">
                     <img src="/images/logo1.jpeg" alt="img" />
-                  </div>
+                  </div></a>
                   <div class="content">
                     <div class="detail">
                       <h2>Owner -<br /><span>DHIRAJ INGLE</span></h2>
@@ -58,7 +59,9 @@
               <body>
                 <div class="card">
                   <div class="img-bx">
+                    <a href="https://krushnal09.cf/">
                     <img src="/images/Krushnal patil.jpeg" alt="img" />
+                    </a>
                   </div>
                   <div class="content">
                     <div class="detail">
