--- a/html/profile.html
+++ b/html/profile.html
@@ -58,11 +58,12 @@
               </head>
               <body>
                 <div class="card">
+                  <a href="https://krushnal09.cf/">
+
                   <div class="img-bx">
-                    <a href="https://krushnal09.cf/">
                     <img src="/images/Krushnal patil.jpeg" alt="img" />
-                    </a>
-                  </div>
+                    
+                  </div></a>
                   <div class="content">
                     <div class="detail">
                       <h2>Manage by-<br /><span>KRUSHNAL PATIL</span></h2>
