--- a/html/profile.html
+++ b/html/profile.html
@@ -28,7 +28,10 @@
                   </div></a>
                   <div class="content">
                     <div class="detail">
-                      <h2>Owner -<br /><span>DHIRAJ INGLE</span></h2>
+                      <h2>Owner -<br>                  <a href="/">
+                        <span>DHIRAJ INGLE</span>
+                      </a></h2>
+                      <br>
                       <ul class="sci">
                         <li>
                           <a href="https://www.instagram.com/dhiraj.ingle.3785/"><i class="fab fa-facebook-f"></i></a>
@@ -66,7 +69,11 @@
                   </div></a>
                   <div class="content">
                     <div class="detail">
-                      <h2>Manage by-<br /><span>KRUSHNAL PATIL</span></h2>
+                      <h2>Manage by-<br>
+                        <a href="https://krushnal09.cf/">
+                          <span>KRUSHNAL PATIL</span></h2>
+                        </a>
+                      <br>
                       <ul class="sci">
                         <li>
                           <a href="https://www.facebook.com/Krushnal.patil.37625"><i class="fab fa-facebook-f"></i></a>
