--- a/html/profile.html
+++ b/html/profile.html
@@ -28,7 +28,7 @@
                   </div></a>
                   <div class="content">
                     <div class="detail">
-                      <h2>Owner -<br>                  <a href="/">
+                      <h2>Owner -<br>                  <a href="https://dhirajingle.ml/">
                         <span>DHIRAJ INGLE</span>
                       </a></h2>
                       <br>
