--- a/index.html
+++ b/index.html
@@ -48,7 +48,14 @@
                DHIRAJHUB
              </span>
            </a>
-
+         
+<div class="viwers">
+           TOTAl VISITS
+           <a href="https://www.hitwebcounter.com" target="_blank">
+            <img src="https://hitwebcounter.com/counter/counter.php?page=8033172&style=0010&nbdigits=5&type=ip&initCount=0" 
+           id="count" title="Free Counter" Alt="web counter"   border="0" /></a>                                    
+                 
+</div>
            <div class="nav_list">
              <div class="nav_items navtop">
                <a href="#" class="nav_link navtop active">
