--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
        <section class="video_content grid">
         <!--video template-->
          <div class="video_items">
-           <a href="single-page.html">
+           <a href="/videoweb.html/video1.html">">
              <img src="images/video_images/back5.jpg" alt="">
            </a>
            <div class="details flex">
@@ -205,7 +205,7 @@
          </div>
          <!---->
          <div class="video_items">
-         <var ></var><a href="/videoweb.html/video.html">
+         <a href="/videoweb.html/video.html">
             <img src="images/video_images/back3.jpg" alt="">
           </a>
           <div class="details flex">
