--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <!--video template-->
          <div class="video_items">
            <a href="/videoweb.html/video1.html">">
-             <img src="images/video_images/back5.jpg" alt="">
+             <img src="images/video_images/1.jpg" alt="">
            </a>
            <div class="details flex">
              
@@ -207,8 +207,8 @@
          </div>
          <!---->
          <div class="video_items">
-         <a href="/videoweb.html/video.html">
-            <img src="images/video_images/back3.jpg" alt="">
+         <a href="/videoweb.html/video2.html">
+            <img src="images/video_images/2.jpg" alt="">
           </a>
           <div class="details flex">
 
@@ -220,8 +220,8 @@
           </div>
         </div>
          <div class="video_items">
-           <a href="single-page.html">
-             <img src="images/video_images/back3.jpg" alt="">
+           <a href="/videoweb.html/video3.html">
+             <img src="images/video_images/3.jpg" alt="">
            </a>
            <div class="details flex">
 
@@ -233,8 +233,8 @@
            </div>
          </div>
          <div class="video_items">
-          <a href="single-page.html">
-            <img src="images/video_images/back3.jpg" alt="">
+          <a href="/videoweb.html/video4.html">
+            <img src="images/video_images/4.jpg" alt="">
           </a>
           <div class="details flex">
 
@@ -246,8 +246,8 @@
           </div>
         </div>
         <div class="video_items">
-          <a href="single-page.html">
-            <img src="images/video_images/back3.jpg" alt="">
+          <a href="/videoweb.html/video5.html">
+            <img src="images/video_images/5.jpg" alt="">
           </a>
           <div class="details flex">
 
@@ -259,8 +259,8 @@
           </div>
         </div>
         <div class="video_items">
-          <a href="single-page.html">
-            <img src="images/video_images/back3.jpg" alt="">
+          <a href="/videoweb.html/video6.html">
+            <img src="images/video_images/6.jpg" alt="">
           </a>
           <div class="details flex">
 
@@ -272,8 +272,8 @@
           </div>
         </div>
         <div class="video_items">
-          <a href="single-page.html">
-            <img src="images/video_images/back3.jpg" alt="">
+          <a href="/videoweb.html/video7.html">
+            <img src="images/video_images/7.jpg" alt="">
           </a>
           <div class="details flex">
 
@@ -285,8 +285,8 @@
           </div>
         </div>
         <div class="video_items">
-          <a href="single-page.html">
-            <img src="images/video_images/back3.jpg" alt="">
+          <a href="/videoweb.html/video8.html">
+            <img src="images/video_images/8.jpg" alt="">
           </a>
           <div class="details flex">
 
@@ -298,8 +298,8 @@
           </div>
         </div>
         <div class="video_items">
-          <a href="single-page.html">
-            <img src="images/video_images/back3.jpg" alt="">
+          <a href="/videoweb.html/video9.html">
+            <img src="images/video_images/9.jpg" alt="">
           </a>
           <div class="details flex">
 
@@ -311,8 +311,8 @@
           </div>
         </div>
         <div class="video_items">
-          <a href="single-page.html">
-            <img src="images/video_images/back3.jpg" alt="">
+          <a href="/videoweb.html/video10.html">
+            <img src="images/video_images/10.jpg" alt="">
           </a>
           <div class="details flex">
 
@@ -324,8 +324,8 @@
           </div>
         </div>
         <div class="video_items">
-          <a href="single-page.html">
-            <img src="images/video_images/back3.jpg" alt="">
+          <a href="/videoweb.html/video11.html">
+            <img src="images/video_images/11.jpg" alt="">
           </a>
           <div class="details flex">
 
@@ -337,8 +337,8 @@
           </div>
         </div>
         <div class="video_items">
-          <a href="single-page.html">
-            <img src="images/video_images/back3.jpg" alt="">
+          <a href="/videoweb.html/video12.html">
+            <img src="images/video_images/12.jpg" alt="">
           </a>
           <div class="details flex">
 
@@ -349,6 +349,111 @@
             </div>
           </div>
         </div>
+        <div class="video_items">
+          <a href="/videoweb.html/video13.html">
+            <img src="images/video_images/13.jpg" alt="">
+          </a>
+          <div class="details flex">
+
+            <div class="heading">
+              <p>How to make Hotel Booking Website With HTML CSS ......</p>
+              <span>DHIRAJHUB <i class="fa fa-circle-check"></i> </span>
+              <span>56.7M .1 Week ago</span>
+            </div>
+          </div>
+        </div>
+        <div class="video_items">
+          <a href="/videoweb.html/video14.html">
+            <img src="images/video_images/14.jpg" alt="">
+          </a>
+          <div class="details flex">
+
+            <div class="heading">
+              <p>How to make Hotel Booking Website With HTML CSS ......</p>
+              <span>DHIRAJHUB <i class="fa fa-circle-check"></i> </span>
+              <span>56.7M .1 Week ago</span>
+            </div>
+          </div>
+        </div>
+        <div class="video_items">
+          <a href="/videoweb.html/video15.html">
+            <img src="images/video_images/15.jpg" alt="">
+          </a>
+          <div class="details flex">
+
+            <div class="heading">
+              <p>How to make Hotel Booking Website With HTML CSS ......</p>
+              <span>DHIRAJHUB <i class="fa fa-circle-check"></i> </span>
+              <span>56.7M .1 Week ago</span>
+            </div>
+          </div>
+        </div>
+        <div class="video_items">
+          <a href="/videoweb.html/video16.html">
+            <img src="images/video_images/16.jpg" alt="">
+          </a>
+          <div class="details flex">
+
+            <div class="heading">
+              <p>How to make Hotel Booking Website With HTML CSS ......</p>
+              <span>DHIRAJHUB <i class="fa fa-circle-check"></i> </span>
+              <span>56.7M .1 Week ago</span>
+            </div>
+          </div>
+        </div>
+        <div class="video_items">
+          <a href="/videoweb.html/video17.html">
+            <img src="images/video_images/17.jpg" alt="">
+          </a>
+          <div class="details flex">
+
+            <div class="heading">
+              <p>How to make Hotel Booking Website With HTML CSS ......</p>
+              <span>DHIRAJHUB <i class="fa fa-circle-check"></i> </span>
+              <span>56.7M .1 Week ago</span>
+            </div>
+          </div>
+        </div>
+        <div class="video_items">
+          <a href="/videoweb.html/video18.html">
+            <img src="images/video_images/18.jpg" alt="">
+          </a>
+          <div class="details flex">
+
+            <div class="heading">
+              <p>How to make Hotel Booking Website With HTML CSS ......</p>
+              <span>DHIRAJHUB <i class="fa fa-circle-check"></i> </span>
+              <span>56.7M .1 Week ago</span>
+            </div>
+          </div>
+        </div>
+        <div class="video_items">
+          <a href="/videoweb.html/video19.html">
+            <img src="images/video_images/19.jpg" alt="">
+          </a>
+          <div class="details flex">
+
+            <div class="heading">
+              <p>How to make Hotel Booking Website With HTML CSS ......</p>
+              <span>DHIRAJHUB <i class="fa fa-circle-check"></i> </span>
+              <span>56.7M .1 Week ago</span>
+            </div>
+          </div>
+        </div>
+        <div class="video_items">
+          <a href="/videoweb.html/video20.html">
+            <img src="images/video_images/20.jpg" alt="">
+          </a>
+          <div class="details flex">
+
+            <div class="heading">
+              <p>How to make Hotel Booking Website With HTML CSS ......</p>
+              <span>DHIRAJHUB <i class="fa fa-circle-check"></i> </span>
+              <span>56.7M .1 Week ago</span>
+            </div>
+          </div>
+        </div>
+
        </section>
      </main>
      <footer>
