--- a/videoweb.html/video16.html
+++ b/videoweb.html/video16.html
@@ -335,13 +335,46 @@
         <div class="left_content" id="left_content">
 
           <!--TEMPLATE-->
+<!--
 
+
+  |
+  |
+  |
+  |
+  |
+  |
+  |
+  |
+  |
+  |
+  |
+  |
+  |
+  |
+  |
+  |
+  |
+  |
+  |  
+\ | /
+ \ /
+  V
+
+
+
+
+
+
+
+
+-->
           <!--        video tages            -->
 
 <video>
-          <iframe width="866" height="650" src="https://www.18porn.sex/embed/6278" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+    <iframe src="https://www.xvideos.com/embedframe/59987061" frameborder=0 width=866 height=400 id="vid" scrolling=no allowfullscreen=allowfullscreen></iframe>
 
-          </video>
+</video>
 
           <!--        total viwer            -->
 
@@ -770,7 +803,8 @@
         <div class="right_content">
 
           <button class="chat">Show Chat Replay</button>
-(<!--
+
+         <!--
           <div class="tags">
             <label class="tags-bg">All</label>
             <label class="tags-bg">Web Design</label>
@@ -779,67 +813,68 @@
           </div>
 -->
 <div class="video_items vide_sidebar flex">
-  <a href="/videoweb.html/video3.html">
-    <img src="/images/video_images/3.jpg" alt="">
-  </a>
-  <div class="details">
-    <p>How to make hotel booking website with HTML css....</p>
-    <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
-    <span>56.7M . 1 Week ago</span>
+    <a href="/videoweb.html/video3.html">
+      <img src="/images/video_images/3.jpg" alt="">
+    </a>
+    <div class="details">
+      <p>How to make hotel booking website with HTML css....</p>
+      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>56.7M . 1 Week ago</span>
+    </div>
+  </div>
+  <div class="video_items vide_sidebar flex">
+    <a href="/videoweb.html/video4.html">
+      <img src="/images/video_images/4.jpg" alt="">
+    </a>
+    <div class="details">
+      <p>How to make hotel booking website with HTML css....</p>
+      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>56.7M . 1 Week ago</span>
+    </div>
+  </div>
+  <div class="video_items vide_sidebar flex">
+    <a href="/videoweb.html/video5.html">
+      <img src="/images/video_images/5.jpg" alt="">
+    </a>
+    <div class="details">
+      <p>How to make hotel booking website with HTML css....</p>
+      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>56.7M . 1 Week ago</span>
+    </div>
+  </div>
+  <div class="video_items vide_sidebar flex">
+    <a href="/videoweb.html/video8.html">
+      <img src="/images/video_images/8.jpg" alt="">
+    </a>
+    <div class="details">
+      <p>How to make hotel booking website with HTML css....</p>
+      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>56.7M . 1 Week ago</span>
+    </div>
+  </div>
+  <div class="video_items vide_sidebar flex">
+    <a href="/videoweb.html/video9.html">
+      <img src="/images/video_images/9.jpg" alt="">
+    </a>
+    <div class="details">
+      <p>How to make hotel booking website with HTML css....</p>
+      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>56.7M . 1 Week ago</span>
+    </div>
+  </div>
+  <div class="video_items vide_sidebar flex">
+    <a href="/videoweb.html/video10.html">
+      <img src="/images/video_images/10.jpg" alt="">
+    </a>
+    <div class="details">
+      <p>How to make hotel booking website with HTML css....</p>
+      <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
+      <span>56.7M . 1 Week ago</span>
+    </div>
   </div>
 </div>
-<div class="video_items vide_sidebar flex">
-  <a href="/videoweb.html/video4.html">
-    <img src="/images/video_images/4.jpg" alt="">
-  </a>
-  <div class="details">
-    <p>How to make hotel booking website with HTML css....</p>
-    <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
-    <span>56.7M . 1 Week ago</span>
-  </div>
 </div>
-<div class="video_items vide_sidebar flex">
-  <a href="/videoweb.html/video5.html">
-    <img src="/images/video_images/5.jpg" alt="">
-  </a>
-  <div class="details">
-    <p>How to make hotel booking website with HTML css....</p>
-    <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
-    <span>56.7M . 1 Week ago</span>
-  </div>
-</div>
-<div class="video_items vide_sidebar flex">
-  <a href="/videoweb.html/video8.html">
-    <img src="/images/video_images/8.jpg" alt="">
-  </a>
-  <div class="details">
-    <p>How to make hotel booking website with HTML css....</p>
-    <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
-    <span>56.7M . 1 Week ago</span>
-  </div>
-</div>
-<div class="video_items vide_sidebar flex">
-  <a href="/videoweb.html/video9.html">
-    <img src="/images/video_images/9.jpg" alt="">
-  </a>
-  <div class="details">
-    <p>How to make hotel booking website with HTML css....</p>
-    <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
-    <span>56.7M . 1 Week ago</span>
-  </div>
-</div>
-<div class="video_items vide_sidebar flex">
-  <a href="/videoweb.html/video10.html">
-    <img src="/images/video_images/10.jpg" alt="">
-  </a>
-  <div class="details">
-    <p>How to make hotel booking website with HTML css....</p>
-    <span>GorkCoder <i class="fa fa-cricle-check"> </i> </span>
-    <span>56.7M . 1 Week ago</span>
-  </div>
-</div>
-</div>
-</div>
+
     </section>
 
   </main>
