--- a/index.html
+++ b/index.html
@@ -193,14 +193,14 @@
        <section class="video_content grid">
         <!--video template-->
          <div class="video_items">
-           <a href="/videoweb.html/video1.html">">
+           <a href="/videoweb.html/video1.html">
              <img src="images/video_images/1.jpg" alt="">
            </a>
            <div class="details flex">
              
              <div class="heading">
                <p>How to make Hotel Booking Website With HTML CSS ......</p>
-               <span>GorkCoder <i class="fa fa-circle-check"></i> </span>
+               <span>DHIRAJHUBw <i class="fa fa-circle-check"></i> </span>
                <span>56.7M .1 Week ago</span>
              </div>
            </div>
