--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <h2><i class="fa fa-play-circle-o" aria-hidden="true"></i>list VIDEOS</h2>
                 </div>
                 <ul class="text-toplist">
-                <select name=''top''>
+                <select name="top">
                 <option>1</option>
                 <option>2</option>
                 <option>3</option>
