--- a/single-page.html
+++ b/single-page.html
@@ -79,11 +79,10 @@
               <i class="fa-solid fa-thumbs-up nav_icon"></i>
               <span class="nav_name">Like</span>
             </a>
-<!--
-            <div class="nav_dropdown">
+<!--          <div class="nav_dropdown">
               <a href="#" class="nav_link">
-                <i class="fa-solid fa-chevron-down nav_icon"></i>
-                <span class="nav_name">Show More</span>
+                <span class="nav_name">Categories</span>                <i class="fa-solid fa-chevron-down nav_icon"></i>
+
               </a>
 
               <div class="nav_dropdown-collapse">
