--- a/html/profile.html
+++ b/html/profile.html
@@ -22,10 +22,11 @@
               </head>
               <body>
                 <div class="card">
-                  <a href="/">
-                  <div class="img-bx">
+                  
+                  <div class="img-bx"><a href="/index.html">
                     <img src="/images/logo1.jpeg" alt="img" />
-                  </div></a>
+                  </a>
+                  </div>
                   <div class="content">
                     <div class="detail">
                       <h2>Owner -<br>                  <a href="https://dhirajingle.ml/">
