--- a/videoweb.html/video1.html
+++ b/videoweb.html/video1.html
@@ -96,7 +96,7 @@
 
           <div class="nav_items navtop">
 
-            <a href="#" class="nav_link navtop active">
+            <a href="/" class="nav_link navtop active">
 
               <i class="fa fa-house nav_icon"></i>
 
