--- a/videoweb.html/video2.html
+++ b/videoweb.html/video2.html
@@ -54,7 +54,7 @@
 
         <div class="nav_list">
           <div class="nav_items navtop">
-            <a href="#" class="nav_link navtop active">
+            <a href="/" class="nav_link navtop active">
               <i class="fa fa-house nav_icon"></i>
               <span class="nav_name">Home</span>
             </a>
