--- a/videoweb.html/video12.html
+++ b/videoweb.html/video12.html
@@ -168,45 +168,27 @@
 
                 <div class="nav_dropdown-content">
 
-                  <a href="#" class="nav_dropdown-item">1</a>
+                  <a href="#" class="nav_dropdown-item">Anal</a>
+                  <a href="#" class="nav_dropdown-item">Aunty</a>
+                  <a href="#" class="nav_dropdown-item">Arab</a>
+                  <a href="#" class="nav_dropdown-item">Asian</a>
+                  <a href="#" class="nav_dropdown-item">BBC</a>
+                  <a href="#" class="nav_dropdown-item">BBW</a>
+                  <a href="#" class="nav_dropdown-item">Bhabhi</a>
+                  <a href="#" class="nav_dropdown-item">Black</a>
+                  <a href="#" class="nav_dropdown-item">Cumshot</a>
+                  <a href="#" class="nav_dropdown-item">Deepthroat</a>
+                  <a href="#" class="nav_dropdown-item">Gangbang</a>
+                  <a href="#" class="nav_dropdown-item">Hardcore</a>
+                  <a href="#" class="nav_dropdown-item">Hentai</a>
+                  <a href="#" class="nav_dropdown-item">Hindi</a>
+                  <a href="#" class="nav_dropdown-item">Indian</a>
+                  <a href="#" class="nav_dropdown-item">Maid</a>
+                  <a href="#" class="nav_dropdown-item">MMS</a>
+                  <a href="#" class="nav_dropdown-item">Movie</a>
+                  <a href="#" class="nav_dropdown-item">Solo</a>
+                  <a href="#" class="nav_dropdown-item">Owner's Choice</a>
 
-                  <a href="#" class="nav_dropdown-item">2</a>
-
-                  <a href="#" class="nav_dropdown-item">3</a>
-
-                  <a href="#" class="nav_dropdown-item">4</a>
-
-                  <a href="#" class="nav_dropdown-item">5</a>
-
-                  <a href="#" class="nav_dropdown-item">6</a>
-
-                  <a href="#" class="nav_dropdown-item">7</a>
-
-                  <a href="#" class="nav_dropdown-item">8</a>
-
-                  <a href="#" class="nav_dropdown-item">9</a>
-
-                  <a href="#" class="nav_dropdown-item">10</a>
-
-                  <a href="#" class="nav_dropdown-item">12</a>
-
-                  <a href="#" class="nav_dropdown-item">13</a>
-
-                  <a href="#" class="nav_dropdown-item">14</a>
-
-                  <a href="#" class="nav_dropdown-item">15</a>
-
-                  <a href="#" class="nav_dropdown-item">16</a>
-
-                  <a href="#" class="nav_dropdown-item">17</a>
-
-                  <a href="#" class="nav_dropdown-item">18</a>
-
-                  <a href="#" class="nav_dropdown-item">19</a>
-
-                  <a href="#" class="nav_dropdown-item">20</a>
-
-                  
 
                   
 
